refactor: address sonar cloud issues